--- a/.github/workflows/auto-merge-dev-to-deployment.yml
+++ b/.github/workflows/auto-merge-dev-to-deployment.yml
@@ -2,7 +2,7 @@ name: Auto Merge Dev to Deployment
 
 on:
     schedule:
-        - cron: "0 0 * * *" # This runs daily at midnight UTC
+        - cron: "12 22 * * *" # This runs at 10:12 PM (UTC)
     workflow_dispatch: # Allows manual triggering of the workflow as well
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
               uses: actions/checkout@v3
 
             # Merge dev branch into deployment
-            - name: Merge dev into deployment O_O
+            - name: Merge dev into deployment
               run: |
                   git config user.name "github-actions[bot]"
                   git config user.email "github-actions[bot]@users.noreply.github.com"
