--- a/.github/workflows/auto-merge-dev-to-deployment.yml
+++ b/.github/workflows/auto-merge-dev-to-deployment.yml
@@ -2,8 +2,8 @@ name: Auto Merge Dev to Deployment
 
 on:
     schedule:
-        - cron: "12 22 * * *" # This runs at 10:12 PM (UTC)
-    workflow_dispatch: # Allows manual triggering of the workflow as well
+        - cron: "12 22 * * *" # Adjust cron to run at 10:12 PM UTC
+    workflow_dispatch: # Allow manual triggering as well
 
 jobs:
     merge:
@@ -13,12 +13,23 @@ jobs:
             # Checkout the repository
             - name: Checkout repository
               uses: actions/checkout@v3
+              with:
+                  fetch-depth: 0 # Fetch all branches to ensure 'deployment' exists
 
             # Merge dev branch into deployment
             - name: Merge dev into deployment
               run: |
                   git config user.name "github-actions[bot]"
                   git config user.email "github-actions[bot]@users.noreply.github.com"
+
+                  # Fetch the remote branches
+                  git fetch origin
+
+                  # Checkout the deployment branch
                   git checkout deployment
+
+                  # Merge the dev branch into deployment
                   git merge dev --no-ff
+
+                  # Push the result to the remote deployment branch
                   git push origin deployment
