--- a/.github/workflows/auto-merge-dev-to-deployment.yml
+++ b/.github/workflows/auto-merge-dev-to-deployment.yml
@@ -18,6 +18,8 @@ jobs:
 
             # Merge dev branch into deployment
             - name: Merge dev into deployment
+              permissions:
+                  contents: write
               run: |
                   git config user.name "github-actions[bot]"
                   git config user.email "github-actions[bot]@users.noreply.github.com"
