--- a/.github/workflows/auto-merge-dev-to-deployment.yml
+++ b/.github/workflows/auto-merge-dev-to-deployment.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
     merge:
-        permissions:
-            contents: write
+        permissions: write-all
         runs-on: ubuntu-latest
 
         steps:
