--- a/BE/package.json
+++ b/BE/package.json
@@ -21,15 +21,16 @@
     "dotenv": "^16.4.5",
     "express-validator": "^7.2.0",
     "jest": "^29.7.0",
+    "node-fetch": "^3.3.2",
     "strip-ansi": "^7.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.4.0",
-    "@babel/preset-env": "^7.25.4",
-        "@babel/preset-typescript": "^7.24.7",
     "john-leidy-prettier-config": "^1.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
