created add module request for testing, returns everything we want to examine for now, validation as well.

--- a/BE/tsconfig.json
+++ b/BE/tsconfig.json
@@ -97,7 +97,8 @@
     "skipLibCheck": true,
     "typeRoots": [
       "./src/Types/",
-      "./src/Types/Express/index.d.ts"
+      "./src/Types/Express/index.d.ts",
+      "./src/Types/RequestTypes/index.d.ts"
     ]
   },
   "include": ["src/**/*.ts"],
