created tests for routers, validation and controllers

--- a/BE/tsconfig.json
+++ b/BE/tsconfig.json
@@ -102,6 +102,6 @@
       "./src/Types/RequestTypes/index.d.ts"
     ]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude":["node_modules"]
 }
