--- a/BE/package.json
+++ b/BE/package.json
@@ -6,7 +6,7 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "npx kill-port 3000 && nodemon --delay 1000ms",
-    "test": "npm install && npm run build && npm run test:jest:verbose",
+    "test": "npm install && npm run test:jest:verbose",
     "test:jest:verbose": "jest --verbose --config jest.config.verbose.js",
     "posttest": "node dist/TestUtils/posttest.js"
   },
@@ -21,15 +21,17 @@
     "dotenv": "^16.4.5",
     "express-validator": "^7.2.0",
     "jest": "^29.7.0",
-    "strip-ansi": "^7.1.0"
+    "strip-ansi": "^7.1.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.4.0",
-    "@babel/preset-env": "^7.25.4",
-        "@babel/preset-typescript": "^7.24.7",
+    "@types/supertest": "^6.0.2",
     "john-leidy-prettier-config": "^1.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
