--- a/BE/package.json
+++ b/BE/package.json
@@ -19,8 +19,11 @@
     "cors": "^2.8.5",
     "dexpress": "^3.0.0",
     "dotenv": "^16.4.5",
+    "express-jwt": "^8.4.1",
     "express-validator": "^7.2.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "strip-ansi": "^7.1.0",
     "supertest": "^7.0.0"
   },
@@ -30,6 +33,7 @@
     "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-jwt": "^6.0.4",
     "@types/node": "^22.4.0",
     "@types/supertest": "^6.0.2",
     "john-leidy-prettier-config": "^1.0.0",
