--- a/BE/package.json
+++ b/BE/package.json
@@ -24,6 +24,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "nodemon": "^3.1.7",
     "strip-ansi": "^7.1.0",
     "supertest": "^7.0.0"
   },
