--- a/BE/package.json
+++ b/BE/package.json
@@ -24,6 +24,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "mongoose": "^8.7.1",
     "nodemon": "^3.1.7",
     "strip-ansi": "^7.1.0",
     "supertest": "^7.0.0"
@@ -35,6 +36,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-jwt": "^6.0.4",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.4.0",
     "@types/supertest": "^6.0.2",
     "john-leidy-prettier-config": "^1.0.0",
