--- a/BE/tsconfig.json
+++ b/BE/tsconfig.json
@@ -103,6 +103,11 @@
             "./src/Types/Jwt/index.d.ts"
         ]
     },
-    "include": ["src/**/*.ts", "tests/**/*.ts"],
+    "include": [
+        "src/**/*.ts",
+        "tests/**/*.ts",
+        "src/Providers/ModEval/GQL_Queries/QueryResponses",
+        "src/Providers/ModEval/GQL_Queries/CombinedResult"
+    ],
     "exclude": ["node_modules"]
 }
