--- a/BE/package.json
+++ b/BE/package.json
@@ -21,11 +21,14 @@
         "dotenv": "^16.4.5",
         "express-jwt": "^8.4.1",
         "express-validator": "^7.2.0",
+        "graphql": "^16.9.0",
+        "isomorphic-git": "^1.27.1",
         "jest": "^29.7.0",
         "jsonwebtoken": "^9.0.2",
         "jwks-rsa": "^3.1.0",
         "mongoose": "^8.7.1",
         "nodemon": "^3.1.7",
+        "openai": "^4.58.2",
         "strip-ansi": "^7.1.0",
         "supertest": "^7.0.0"
     },
